# letsgoing-rpi-arduinocontrol

./: MANIFEST.in  README.md  setup.cfg
letsgoing_rpi_arduinocontrol/: Config.py  Controller.py  Gui.py  SuperButton.py  Video.py  __main__.py
letsgoing_rpi_arduinocontrol/resources/: config.json  default_pinconfig.txt
