[metadata]
name = letsgoing-rpi-arduinocontrol
version = 0.0.3
author = Tobias Glaser
description = GUI for control of Arduino IO from Raspberry Pi
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/tobiglaser/letsgoing-rpi-arduinocontrol
classifiers = 
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v2 (GPLv2)
    Operating System :: POSIX :: Linux

[options]
packages = find:
install_requires =
    adafruit-circuitpython-ds3502
    adafruit-circuitpython-mcp230xx
    python-vlc
    Pillow
    tkinter

python_requires = >=3.7
include_package_data = True

[options.entry_points]
console_scripts =
    letsgoing-rpi-arduinocontrol = letsgoing_rpi_arduinocontrol.__main__:main